Implement plugin path prefixing
+ configure the openAPI context directly to be able to
  use dependency injection